# mechanix-sdk

./: .gitignore  Cargo.toml  README.md
services/audio/: Cargo.toml
services/audio/src/: error.rs  lib.rs
services/audio/src/audio/: client.rs  types.rs
services/bluetooth/: Cargo.toml
services/bluetooth/examples/: pairing_agent.rs
services/bluetooth/src/: adapter.rs  agent.rs  bluetooth.rs  bluetooth_manager.rs  device.rs  error.rs  events.rs  lib.rs
services/bluetooth/src/agent/: mod.rs  server.rs  types.rs
services/bluetooth/src/dbus/: README.md  adapter1.rs  agent_manager1.rs  battery1.rs  device1.rs  mod.rs
services/bluetooth/src/models/: adapter_info.rs  device_info.rs  mod.rs
